src/main/java/com/example/redis/demo/errors/CommonDefinedException.java
package com.example.redis.demo.errors;

public class CommonDefinedException {

    public static ServiceException MENU_ROOT_EXITS_ERROR = new ServiceException("103005400", "系统忙");



}
